@@ -263,6 +263,24 @@ class Table(object):
         self.longtable = False
 
 
+def width_to_latex_length(length_str):
+    """Convert `length_str` with rst length to LaTeX length.
+
+    This function is copied from docutils' latex writer
+    """
+    match = re.match('(\d*\.?\d*)\s*(\S*)', length_str)
+    if not match:
+        return length_str
+    value, unit = match.groups()[:2]
+    if unit in ('', 'pt'):
+        length_str = '%sbp' % value  # convert to 'bp'
+    # percentage: relate to current line width
+    elif unit == '%':
+        length_str = '%.3f\\linewidth' % (float(value)/100.0)
+
+    return length_str
+
+
 class LaTeXTranslator(nodes.NodeVisitor):
     sectionnames = ["part", "chapter", "section", "subsection",
                     "subsubsection", "paragraph", "subparagraph"]
@@ -1409,7 +1427,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
         if 'width' in node and node.get('align', '') in ('left', 'right'):
             self.body.append('\\begin{wrapfigure}{%s}{%s}\n\\centering' %
                              (node['align'] == 'right' and 'r' or 'l',
-                              node['width']))
+                              width_to_latex_length(node['width'])))
             self.context.append(ids + '\\end{wrapfigure}\n')
         elif self.in_minipage:
             if ('align' not in node.attributes or
