@@ -49,6 +49,7 @@ Bugs fixed
 * Show error reason when multiple math extensions are loaded (ref: #2499)
 * #2483: any figure number was not assigned if figure title contains only non text objects
 * #2501: Unicode subscript numbers are normalized in LaTeX
+* #2492: Figure directive with :figwidth: generates incorrect Latex-code
 
 
 Release 1.4.1 (released Apr 12, 2016)
